--- a/css/common.css
+++ b/css/common.css
@@ -620,6 +620,10 @@ ol {
     position: relative;
 }
 
+#new_hd .hd_con1 {background: #4D8DE7; width: 100%;
+    height: 100px;
+    position: relative; }
+
 #new_hd .hd_con2 {background:#57BBAD; width: 100%;
     height: 100px;
     position: relative; }
