--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,7 @@ p { letter-spacing: 0; }
 
 .content_section_2_wrap .content_section_2_slider_wrap .inner_wrap > li > a .info_wrap .list_cate { display: inline-block; width: auto; height: auto; margin: 0 auto 8px 0; padding: 10px; line-height: 1; font-size: 15px; font-weight: normal; color: #333; border: 1px solid rgba(0, 0, 0, 0.3); }
 
-.content_section_2_wrap .content_section_2_slider_wrap .inner_wrap > li > a .info_wrap .list_title { width: 100%; font-size: 18px; font-weight: 800; height: 54px; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; word-break: break-word; white-space: normal; margin-bottom: 6px; }
+.content_section_2_wrap .content_section_2_slider_wrap .inner_wrap > li > a .info_wrap .list_title { width: 100%; font-size: 18px; font-weight: 800; height: 52px; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; word-break: break-word; white-space: normal; margin-bottom: 6px; }
 
 .content_section_2_wrap .content_section_2_slider_wrap .inner_wrap > li > a .info_wrap .list_content { white-space: nowrap; text-overflow: ellipsis; overflow: hidden; margin-bottom: 24px; }
 
@@ -328,13 +328,13 @@ p { letter-spacing: 0; }
 
 .content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li:last-child { margin-bottom: 0; }
 
-.content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a { display: flex; width: 100%; height: auto; justify-content: flex-start; align-items: center; }
+.content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a { display: flex; width: 100%; height: auto; justify-content: flex-start; align-items: center; min-width: 0;}
 
-.content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a .state { flex: 0 1 auto; display: inline-block; width: auto; height: auto; padding: 10px; line-height: 1; font-size: 15px; font-weight: normal; color: #333; border: 1px solid rgba(0, 0, 0, 0.3); background-color: #fff; margin-right: 6px; }
+.content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a .state { flex: 0 0 auto; display: inline-block; width: auto; height: auto; padding: 10px; line-height: 1; font-size: 15px; font-weight: normal; color: #333; border: 1px solid rgba(0, 0, 0, 0.3); background-color: #fff; margin-right: 6px; }
 
-.content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a .subject { flex: 1 1 auto; display: block; width: auto; height: auto; font-size: 18px; font-weight: 800; margin-right: 6px; }
+.content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a .subject { flex: 0 1 auto; display: block; width: auto; height: auto; font-size: 18px; font-weight: 800; margin-right: 6px;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;}
 
-.content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a .count { flex: 0 1 auto; display: block; width: auto; height: auto; font-size: 15px; font-weight: normal; }
+.content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a .count { flex: 0 0 auto; display: block; width: auto; height: auto; font-size: 15px; font-weight: normal;margin-left: auto;}
 
 .content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a .count b { font-weight: bold; }
 
@@ -364,9 +364,9 @@ p { letter-spacing: 0; }
 
 .content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box .top_wrap { flex: 0 1 auto; display: flex; justify-content: flex-start; align-items: center; }
 
-.content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box .top_wrap .d_day { flex: 0 1 auto; display: inline-block; width: auto; height: auto; padding: 12px 18px; font-size: 18px; font-weight: 800; color: #fff; background-color: #EE9A6A; border-radius: 100px; margin-right: 16px; line-height: 1; }
+.content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box .top_wrap .d_day { flex: 0 0 auto; display: inline-block; width: auto; height: auto; padding: 12px 18px; font-size: 18px; font-weight: 800; color: #fff; background-color: #EE9A6A; border-radius: 100px; margin-right: 16px; line-height: 1; min-width: 0;}
 
-.content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box .top_wrap .title { flex: 1 1 auto; display: inline-block; width: auto; height: auto; font-size: 32px; font-weight: 800; }
+.content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box .top_wrap .title { flex: 0 1 auto; display: inline-block; width: 68%; height: auto; font-size: 32px; font-weight: 800; white-space: nowrap;text-overflow: ellipsis;overflow: hidden;}
 
 .content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box > p { flex: 1 1 auto; display: block; width: 100%; height: auto; font-size: 18px; font-weight: normal; }
 
@@ -428,7 +428,7 @@ p { letter-spacing: 0; }
 
 .content_section_4_wrap .result_wrap .result_right > li .title { flex: 0 1 auto; display: block; width: 100%; height: 58px; font-size: 18px; font-weight: 800; color: #333; margin-bottom: 8px; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; word-break: break-word; white-space: normal; }
 
-.content_section_4_wrap .result_wrap .result_right > li .content { flex: 0 1 auto; display: block; width: 100%; height: 46px; font-size: 14px; font-weight: normal; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; word-break: break-word; white-space: normal; }
+.content_section_4_wrap .result_wrap .result_right > li .content { flex: 0 1 auto; display: block; width: 100%; height: 45px; font-size: 14px; font-weight: normal; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; word-break: break-word; white-space: normal; }
 
 .content_section_4_wrap .result_wrap .result_right > li .action_btn_wrap { flex: 1 1 auto; display: flex; width: 100%; height: auto; justify-content: flex-start; align-items: center; margin-top: 24px; }
 
@@ -444,13 +444,13 @@ p { letter-spacing: 0; }
 
 .content_section_4_wrap .result_wrap .result_right > li .action_btn_wrap2 .state { flex: 0 0 auto; display: inline-block; font-size: 16px; font-weight: bold; width: 50px; height: 50px; line-height: 50px; text-align: center; border: 1px solid #E16118; border-radius: 50%; background-color: rgba(224, 97, 24, 0.16); color: #E16118; margin-right: 10px; }
 
-.content_section_4_wrap .result_wrap .result_right > li .action_btn_wrap2 .more_btn { flex: 1 1 auto; display: block; width: 100%; height: auto; font-size: 16px; font-weight: 800; color: #7A7A7A; text-align: center; padding: 20px 32px; border-radius: 40px; line-height: 1; background-color: #F1F1F1; }
+.content_section_4_wrap .result_wrap .result_right > li .action_btn_wrap2 .more_btn { flex: 1 1 auto; display: block; width: 100%; height: auto; font-size: 16px; font-weight: 800; color: #7A7A7A; text-align: center; padding: 20px 4px; border-radius: 40px; line-height: 1; background-color: #F1F1F1; }
 
 .content_section_5_wrap { display: block; width: 100%; height: auto; padding: 120px 0 160px; background-color: #F1F1F1; }
 
-.content_section_5_wrap .align_wrap { display: flex; }
+.content_section_5_wrap .align_wrap { display: flex;justify-content: space-between;}
 
-.content_section_5_wrap .notice_wrap { flex: 1 1 auto; width: 50%; height: auto; margin-right: 110px; }
+.content_section_5_wrap .notice_wrap { flex: 0 1 48%;min-width: 0;margin-right: 24px;}
 
 .content_section_5_wrap .notice_wrap > h2 { display: flex; width: 100%; height: auto; font-size: 28px; font-weight: 800; color: #444; font-family: 'esamanru OTF'; line-height: 40px; }
 
@@ -470,7 +470,7 @@ p { letter-spacing: 0; }
 
 .content_section_5_wrap .notice_wrap .board_wrap > li > a .date { flex: 0 1 auto; width: 100px; font-size: 15px; font-weight: normal; margin-left: auto; margin-left: 16px; }
 
-.content_section_5_wrap .banner_wrap { flex: 1 1 auto; width: auto; height: auto; }
+.content_section_5_wrap .banner_wrap { flex: 0 0 auto; width: 563px; height: auto; }
 
 .content_section_5_wrap .banner_wrap > h2 { display: flex; width: 100%; height: auto; font-size: 28px; font-weight: 800; color: #444; font-family: 'esamanru OTF'; line-height: 40px; }
 
@@ -493,3 +493,162 @@ p { letter-spacing: 0; }
 .content_section_5_wrap .banner_slide_wrap .control_btn_stop { display: flex; align-items: center; width: auto; height: auto; font-family: 'esamanru'; font-size: 12px; font-weight: 500; position: absolute; right: 22px; bottom: 22px; z-index: 10; color: #444; background-color: #fff; border-radius: 100px; padding: 10px; }
 
 .content_section_5_wrap .banner_slide_wrap .control_btn_stop:after { content: ''; display: inline-block; width: 24px; height: 24px; background-image: url("../images/main/stop.png"); background-position: center; background-size: auto; background-repeat: no-repeat; }
+
+
+
+/* RESPONSIVE */
+@media (max-width: 1440px) {
+    .align_wrap {width: 90%;}
+    .visual_wrap {height: auto;padding-bottom: 300px;background-size: contain;}
+    .visual_wrap .main_section_wrap .main_slogan {margin-bottom: 48px;padding-top: 10%;}
+    .visual_wrap .main_section_wrap .user_info_wrap {margin-right: 5%;}
+
+    .content_section_1_wrap .content_section_1_slider_wrap .inner_wrap > li > a {padding: 32px 24px;}
+    .content_section_1_wrap .content_section_1_slider_wrap .inner_wrap > li > a .post_info_list .attend {padding: 7px 10px;}
+
+    .content_section_3_wrap .vote_wrap {flex-wrap: wrap;}
+    .content_section_3_wrap .vote_wrap .vote_box {width: 100%;margin-right: 0;}
+    .content_section_3_wrap .vote_wrap .board_wrap {width: 100%;}
+
+    .content_section_4_wrap .content_section_4_slider_wrap {margin-bottom: 140px;}
+    .content_section_4_wrap .result_wrap .result_right:before {top: 0;width: 280px;height: 380px;background-size: contain;background-position: bottom -20px right -16px;}
+    .content_section_4_wrap .result_wrap .result_left {width: 30%;}
+    .content_section_4_wrap .result_wrap .result_right {width: 70%;}
+    .content_section_4_wrap .result_wrap .result_right > li {max-width: 340px;width: 47%;padding: 32px 24px;}
+}
+
+@media (max-width: 1024px) {
+    .visual_wrap {height: 900px;margin-bottom: 110px;padding-bottom: 0;background-position: left bottom;background-color: #4e8ce6;}
+    .visual_wrap .main_section_wrap {flex-direction: column-reverse;}
+    .visual_wrap .main_section_wrap .main_slogan {padding-top: 6%;}
+    .visual_wrap .main_section_wrap .main_slogan > h2 {min-width: auto;font-size: 22px;}
+    .visual_wrap .main_section_wrap .main_slogan > h2 > span {margin-top: 7px;font-size: 42px;}
+    .visual_wrap .main_section_wrap .main_slogan > h2 > img {width: 90%;margin: 18px auto 0;}
+    .visual_wrap .main_section_wrap .user_info_wrap {width: 90%;padding: 40px 32px;}
+
+    .section_con > h2 {font-size: 84px;}
+    .section_con > span {font-size: 36px;}
+    .section_con > p {font-size: 18px;}
+
+    .content_section_1_wrap {padding-bottom: 25%;}
+    .content_section_1_wrap .balloon {top: -140px;}
+    .content_section_1_wrap .content_section_1_slider_wrap {margin: 72px auto 200px;}
+    .content_section_1_wrap .content_section_1_slider_wrap .control_btn {top: -52px;}
+    
+    .content_section_2_wrap .content_section_2_slider_wrap {width: 90%;margin: 0 auto;padding: 10px;}
+    .content_section_2_wrap .content_section_2_slider_wrap .inner_wrap > li > a .info_wrap {padding: 32px 24px;}
+    .content_section_2_wrap .content_section_2_slider_wrap .inner_wrap > li > a .info_wrap .list_title {font-size: 16px;}
+    .content_section_2_wrap .content_section_2_slider_wrap .inner_wrap > li > a .info_wrap .percent_wrap .percent_text {font-size: 16px;}
+    .content_section_2_wrap .content_section_2_slider_wrap .inner_wrap > li > a .info_wrap .percent_wrap progress {width: 100%;}
+    .content_section_2_wrap .slide_cate_wrap > ul > li {flex: 0 0 auto;margin-left: 10%;}
+    .content_section_2_wrap .slide_cate_wrap > ul > li > a {font-size: 22px;}
+
+    .content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li {padding: 48px 40px;}
+    .content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box .top_wrap .title {width: 100%;font-size: 28px;}
+    .content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box > p {margin-top: 8px;font-size: 16px;}
+    .content_section_4_wrap .result_wrap {flex-wrap: wrap;}
+    .content_section_4_wrap .result_wrap .result_left {flex: 0 0 auto;width: 100%;}
+    .content_section_4_wrap .result_wrap .result_right {flex: 0 0 auto;width: 100%;}
+    
+    .content_section_5_wrap {padding: 80px 0 100px;}
+    .content_section_5_wrap .align_wrap {flex-wrap: wrap;}
+    .content_section_5_wrap .notice_wrap {flex: 0 1 100%;}
+    .content_section_5_wrap .notice_wrap > h2 {font-size: 26px;}
+    .content_section_5_wrap .notice_wrap .board_wrap > li > a .subject {font-size: 16px;line-height: 28px;}
+    .content_section_5_wrap .notice_wrap .board_wrap > li > a .date {font-size: 14px;}
+    .content_section_5_wrap .notice_wrap > h2 .more_btn {font-size: 18px;}
+    .content_section_5_wrap .banner_wrap {width: 100%;margin-top: 48px;}
+    .content_section_5_wrap .banner_wrap > h2 {font-size: 26px;}
+    .content_section_5_wrap .banner_slide_wrap {width: 100%;height: auto;}
+}
+
+@media (max-width: 870px) {
+    .visual_wrap .main_section_wrap .main_slogan > h2 {font-size: 18px;font-weight: 400;}
+    .visual_wrap .main_section_wrap .main_slogan > h2 > span {font-size: 38px;}
+    .visual_wrap .main_section_wrap .main_slogan > h2 > img {width: 82%;margin: 8px auto 0;}
+    .visual_wrap .main_section_wrap .user_info_wrap .user_info_checklist {flex: 0 0 100%;margin-left: 0;margin-top: 24px;}
+    .visual_wrap .main_section_wrap .user_info_wrap .user_info_checklist > li {flex: 0 0 25%;margin-left: 0;}
+
+    .content_section_2_wrap,
+    .content_section_3_wrap {padding-bottom: 40%;}
+
+    .content_section_3_wrap .vote_wrap .vote_box::before {display: none;}
+}
+
+@media (max-width: 768px) {
+    .visual_wrap {height: auto;padding-bottom: 40px;margin-bottom: 260px;background: #4e8ce6;}
+    .visual_wrap .main_section_wrap {flex-direction: column;}
+    .visual_wrap .main_section_wrap .main_slogan {padding-top: 0;margin: 0 auto 24px 0;}
+    
+    .content_section_1_wrap .balloon {top: -626px;right: 0;width: 200px;height: 200px;}
+    .content_section_1_wrap .balloon .ballon_img {width: 70%;}
+
+    .section_con > h2 {margin-bottom: 52px;font-size: 78px;}
+    .section_con > span {font-size: 34px;word-break: keep-all;line-height: 1.25;}
+    .section_con > span .title_img {width: 280px;margin: 0 -42px -20px;}
+
+    .content_section_2_wrap .slide_cate_wrap > ul {width: 100%;justify-content: space-between;}
+    .content_section_2_wrap .slide_cate_wrap > ul > li {margin-left: 0;}
+    .content_section_2_wrap .slide_cate_wrap .control_btn {position: absolute;right: 0;bottom: -56px;}
+    .content_section_2_wrap .section_con > span .title_img {position: absolute;top: -132px;left: 130px;width: 220px;margin: 0;}
+
+    .content_section_3_wrap .vote_wrap .vote_box {padding: 32px 40px 40px;}
+    .content_section_3_wrap .vote_wrap .vote_box .vote_title {font-size: 20px;}
+    .content_section_3_wrap .vote_wrap .vote_box .vote_con {height: 64px;font-size: 15px;}
+    .content_section_3_wrap .vote_wrap .vote_box .vote_chart_wrap .chart_down_box,
+    .content_section_3_wrap .vote_wrap .vote_box .vote_chart_wrap .chart_up_box {width: 70px;height: 70px;font-size: 14px;}
+    
+    .content_section_4_wrap {padding-bottom: 80px;}
+    .content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li {padding: 40px 32px;}
+    .content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box .top_wrap .d_day {margin-right: 10px;padding: 10px 14px;font-size: 15px;}
+    .content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box .top_wrap .title {font-size: 20px;}
+    .content_section_4_wrap .content_section_4_slider_wrap .list_wrap .inner_wrap > li .list_box .more_btn {padding: 12px 24px;font-size: 16px;}
+    .content_section_4_wrap .content_section_4_slider_wrap .control_btn .bullet_wrap .swiper-pagination-bullet {width: 12px!important;height: 12px !important;}
+    .content_section_4_wrap .result_wrap .result_left > h3 {font-size: 30px;}
+    .content_section_4_wrap .result_wrap .result_left > p {line-height: 1.3;font-size: 26px;}
+    .content_section_4_wrap .result_wrap .result_left > p > span {display: block;}
+    .content_section_4_wrap .result_wrap .result_right {height: auto;}
+    .content_section_4_wrap .result_wrap .result_right:before {width: 240px;height: 326px;}
+    .content_section_4_wrap .result_wrap .result_right > li {width: calc(50% - 16px);}
+
+}
+
+@media (max-width: 620px) {
+    .visual_wrap {margin-bottom: 300px;}
+    .content_section_1_wrap .balloon {top: -116px;right: auto;width: 160px;height: 160px;}
+}
+
+@media (max-width: 520px) {
+    .visual_wrap .main_section_wrap .main_slogan {margin: 0 auto 24px;}
+    .visual_wrap .main_section_wrap .user_info_wrap {position: relative;padding: 32px 24px;}
+    .visual_wrap .main_section_wrap .user_info_wrap .user_info {flex-basis: 100%;margin-top: 8px;}
+    .visual_wrap .main_section_wrap .user_info_wrap .user_info .user_info_log .user_logout {position: absolute;top: 54px;right: 24px;padding: 6px 12px;font-size: 14px;}
+    .visual_wrap .main_section_wrap .user_info_wrap .user_info_checklist > li > a > span {font-size: 15px;}
+    .visual_wrap .main_section_wrap .user_info_wrap .user_info_checklist > li > a .check_count {font-size: 12px;}
+
+    .section_con > h2 {font-size: 66px;}
+    .section_con > span {margin-top: -18px;font-size: 28px;vertical-align: bottom;}
+    .section_con > p {font-size: 16px;}
+    
+    .content_section_1_wrap .section_con > span .title_img {position: absolute;top: -132px;right: 0;width: 220px;margin: 0;}
+    
+    .content_section_2_wrap .slide_cate_wrap > ul > li > a {font-size: 18px;}
+
+    .content_section_3_wrap .section_con > span .title_img {position: absolute;top: -86px;right: -42px;width: 220px;margin: 0;}
+    .content_section_3_wrap .vote_wrap .vote_box .vote_chart_wrap .chart_down_box,
+    .content_section_3_wrap .vote_wrap .vote_box .vote_chart_wrap .chart_up_box {display: none;}
+    .content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a .state {padding: 8px;font-size: 12px;}
+    .content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a .subject {font-size: 15px;}
+    .content_section_3_wrap .vote_wrap .board_wrap .board_box > ul > li > a .count {font-size: 13px;}
+    
+    .content_section_2_wrap .more_btn,
+    .content_section_3_wrap .more_btn {margin: 40px auto 24px;}
+    
+    .content_section_4_wrap .result_wrap .result_right > li {width: 100%;max-width: 100%;margin: 24px 0;}
+    .content_section_4_wrap .result_wrap .result_right > li:nth-child(2),
+    .content_section_4_wrap .result_wrap .result_right > li:nth-child(3),
+    .content_section_4_wrap .result_wrap .result_right > li:nth-child(4) {margin-top: auto;}
+    .content_section_4_wrap .result_wrap .result_right:before {display: none;}
+    .content_section_4_wrap .result_wrap .result_left > p {font-size: 24px;}
+    .content_section_4_wrap .result_wrap .result_left > p > span {display: inline;}
+}
